--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -13,13 +13,20 @@ html {
 /*
  * Global layout stuff
  */
+head {
+  font-family: 'Bungee', cursive;
+}
+
+span {
+  font-family: 'Bungee', cursive;
+}
 
 body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+/* npm run local */
