--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,9 @@
   width: 100%;
   height: 120px;
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 24px;
+  padding: 1.5em;
+  display: flex;
+  justify-content: space-between;
 
 }
 
@@ -12,4 +14,7 @@
   font-family: 'Bungee', cursive;
 }
 
-/* Ask about classes here and 1.5 em of space instructors */
+#subTitle {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+/* Ask about 1em away from viewport */
