--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,11 +33,13 @@ body {
   width: 90%;
   flex-direction: column;
   background-color: #f4f1ec;
-  justify-content: center;
-  align-items: center;
-
-
-
+  align-self: center;
+  margin: auto;
 }
+
+/* #compose-tweet {
+  display: flex;
+  justify-content: flex-start;
+} */
 
 /* npm run local */
