--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,3 +1,4 @@
+/* Style for nav bar */
 .navbar {
   color: #ffffff; 
   background-color: #4056A1;
@@ -11,8 +12,6 @@
   position: sticky;
   top: 0px;
   z-index: 10;
-
-
 }
 
 nav .title {
@@ -24,4 +23,3 @@ nav .sparkle {
 }
 
 
-/* Ask about 1em away from viewport */
