--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,5 @@
+/* Style for the submission form */
+
 .new-tweet {
   width: 100%;
   margin-top: 1em;
@@ -22,8 +24,3 @@ float: right;
 }
 
 
-/* #submit-tweet {
-justify-content: flex-end;
-flex-direction: row;
-
-}  */
