--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -12,6 +12,7 @@
   position: sticky;
   top: 0px;
   z-index: 10;
+  
 }
 
 nav .title {
@@ -22,4 +23,12 @@ nav .sparkle {
   font-weight: bold;
 }
 
-
+@media only screen and (max-width: 414px) {
+  .tweeter-txt {
+    font-size: 1.5em;
+  }
+  .write-txt {
+    font-size: 16px;
+  }
+  
+}
